投稿機能,一覧機能の実装

--- a/app/views/valorants/index.html.erb
+++ b/app/views/valorants/index.html.erb
@@ -1,24 +1,51 @@
 <h2>募集</h2>
 
- <%= form_with model: @valorant, url:valorants_index_path do |f| %>
- 
+ <%= form_with model: @valorant, method: :post do |f| %>
+
   <h4>目的</h4>
    <%= f.select :purpose, [['フレンド'], ['対戦'], ['協力プレイ']] %>
-   
+
   <h4>ロール</h4>
    <%= f.select :role, [['デュエリスト'], ['コントローラー'], ['イニシエーター'], ['センチネル']] %>
-   
+
 　<h4>モード</h4>
 　 <%= f.select :mode, [['アンレート'], ['コンペティティブ'], ['スパイクラッシュ'], ['デスマッチ'], ['チームデスマッチ'], ['レプリケーション'], ['エスカレーション'], ['カスタムマッチ']] %>
 
 　<h4>DiscordID</h4>
-   <%= f.text_area :discord_id %>
-   
+   <%= f.text_field :discord_id %>
+
 　<h4>ValorantID</h4>
-　 <%= f.text_area :valorant_id %>
-　 
+　 <%= f.text_field :valorant_id %>
+
+　<h4>メッセージ</h4>
+　 <%= f.text_area :message %>
+
 　 <%= f.submit '募集' %>
-　 
+
   <% end %>
 
 
+ <% @valorants.each do |valorant| %>
+
+  <h4>目的</h4>
+   <%= valorant.purpose %>
+
+  <h4>ロール</h4>
+   <%= valorant.role %>
+
+  <h4>モード</h4>
+   <%= valorant.mode %>
+
+  <h4>DiscordID</h4>
+   <%= valorant.discord_id %>
+
+  <h4>ValorantID</h4>
+   <%= valorant.valorant_id %>
+
+  <h4>メッセージ</h4>
+　 <%=  valorant.message %>
+
+ <% end %>
+ 
+ 
+ <%= paginate @valorants %>
