--- a/app/views/valorants/new.html.erb
+++ b/app/views/valorants/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Valorants#new</h1>
-<p>Find me in app/views/valorants/new.html.erb</p>
+<h2>募集</h2>
+
+ <%= form_with model: @valorant, method: :post do |f| %>
+
+  <h4>目的</h4>
+   <%= f.text_field :purpose %>
+
+  <h4>ロール</h4>
+   <%= f.text_field :role %>
+
+　<h4>モード</h4>
+　 <%= f.text_field :mode %>
+
+　<h4>DiscordID</h4>
+   <%= f.text_field :discord_id %>
+
+　<h4>ValorantID</h4>
+　 <%= f.text_field :valorant_id %>
+
+　<h4>メッセージ</h4>
+　 <%= f.text_area :message %>
+
+　 <%= f.submit '募集' %>
+
+  <% end %>
