--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <header>
+    
+    <div class="header">
 
       Online Board
 
@@ -50,7 +51,7 @@
 
     <% end %>
      
-    </header>
+   </div>
     
     <%= yield %>
     
