--- a/app/views/valorants/index.html.erb
+++ b/app/views/valorants/index.html.erb
@@ -14,9 +14,6 @@
 　<h4>DiscordID</h4>
    <%= f.text_field :discord_id %>
 
-　<h4>ValorantID</h4>
-　 <%= f.text_field :valorant_id %>
-
 　<h4>メッセージ</h4>
 　 <%= f.text_area :message %>
 
@@ -28,26 +25,24 @@
  <% @valorants.each do |valorant| %>
 
   <h4>ユーザーID</h4>
-   <%= valorant.user_id %>
+   <%= link_to valorant.user_id, user_path(valorant.user_id) %>
 
   <h4>目的</h4>
    <%= valorant.purpose %>
 
   <h4>ロール</h4>
    <%= valorant.role %>
-
+   
   <h4>モード</h4>
    <%= valorant.mode %>
 
   <h4>DiscordID</h4>
    <%= valorant.discord_id %>
 
-  <h4>ValorantID</h4>
-   <%= valorant.valorant_id %>
-
   <h4>メッセージ</h4>
 　 <%= valorant.message %>
 
+  <h4><%= link_to "募集詳細へ", valorant_path(valorant) %></h4>
 
  <% end %>
 
