--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
 
     <div class="header">
 
-      Online Board
+      
+        <div class="header-font">Online Board</div>
+      
 
       <% if user_signed_in? %>
 
