--- a/app/views/tops/top.html.erb
+++ b/app/views/tops/top.html.erb
@@ -1,1 +1,31 @@
+<body>
 
+ <header>
+    
+  <div class="top-font">
+   \ ゲーム友達を募集するなら /
+  </div>
+ 
+  <div class="title-font">
+     Online Board
+  </div>
+ 
+ </header>
+
+
+ <main>
+    
+   <p>サインアップ・ログインをして</p>
+    <p>今すぐ友達を募集しよう！！</p>
+    　
+    <div class="parent">
+        
+    　<%= link_to "サインアップ", new_user_registration_path, class:"child" %>
+    　 
+      <%= link_to "ログイン", new_user_session_path, class:"child" %>
+    </div>
+    
+ </main>
+
+    　  
+</body>
