--- a/app/views/valorants/new.html.erb
+++ b/app/views/valorants/new.html.erb
@@ -1,25 +1,43 @@
-<h2>募集</h2>
 
- <%= form_with model: @valorant, method: :post do |f| %>
+<body>
+ 
+ <main>
+  
+  <div class="form">
+ 
+   <%= form_with model: @valorant, method: :post do |f| %>
+   
+   <div class="box">
+    <h5>目的</h5>
+     <div class="select"><%= f.select :purpose, [['フレンド'], ['対戦'], ['協力プレイ']] %></div>
+   </div>
+   
+   <div class="box">
+    <h5>ロール</h5>
+     <div class="select"><%= f.select :role, [['デュエリスト'], ['コントローラー'], ['イニシエーター'], ['センチネル']] %></div>
+   </div>
+   
+   <div class="box">
+    <h5>モード</h5>
+　   <div class="select"><%= f.select :mode, [['アンレート'], ['コンペティティブ'], ['スパイクラッシュ'], ['デスマッチ'], ['チームデスマッチ'], ['レプリケーション'], ['エスカレーション'], ['カスタムマッチ']] %></div>
+   </div>
+   
+   <div class="box">
+    <h5>DiscordID</h5>
+     <div class="select"><%= f.text_field :discord_id %></div>
+   </div>
+   
+   <div class="box">
+    <h5>メッセージ</h5>
+     <div class="select"><%= f.text_area :message %></div>
+   </div>
+   
+　   <div class="select"><%= f.submit '募集' ,class:"btn btn-primary" %></div>
 
-  <h4>目的</h4>
-   <%= f.text_field :purpose %>
-
-  <h4>ロール</h4>
-   <%= f.text_field :role %>
-
-　<h4>モード</h4>
-　 <%= f.text_field :mode %>
-
-　<h4>DiscordID</h4>
-   <%= f.text_field :discord_id %>
-
-　<h4>ValorantID</h4>
-　 <%= f.text_field :valorant_id %>
-
-　<h4>メッセージ</h4>
-　 <%= f.text_area :message %>
-
-　 <%= f.submit '募集' %>
-
-  <% end %>
+    <% end %>
+   
+   </div>
+   
+  </main>
+  
+ </body>
